--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "colors": "^1.1.2",
     "ghauth": "^3.2.1",
     "github": "^9.2.0",
-    "got": "^7.1.0"
+    "got": "^7.1.0",
+    "minimist": "^1.2.0"
   }
 }
